fix: lock-free health refresh and fail server on tool discovery error
- Background refresh now takes a snapshot under lock, does ping I/O outside
  the monitor, then publishes results in a short synchronized section. This
  ensures serverHealth()/serverStatus() return instantly without blocking on
  slow pings or reconnect attempts.
- discoverAndBridgeTools now propagates exceptions; bridgeServerTools catches
  them and marks the server FAILED with lastError. Prevents servers from
  appearing CONNECTED with zero tools after a listTools failure.
- Add toolDiscoveryFailureMarksServerFailed test.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>